--- a/components/contact/_index.scss
+++ b/components/contact/_index.scss
@@ -30,9 +30,9 @@
     }
 
     &-button {
-      padding: 10px 3.5rem;
+      padding: 0.75rem 3.5rem;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 1rem;
       opacity: 0;
     }
   }
