refactor(sections): restructure contact section and add email us section

--- a/components/_index.scss
+++ b/components/_index.scss
@@ -1,1 +1,1 @@
-@import 'contact', 'faq', 'footer', 'navbar', 'start', 'why-us';
+@import 'contact', 'email-us', 'faq', 'footer', 'navbar', 'start', 'why-us';
