--- a/components/navbar/components/Links/_index.scss
+++ b/components/navbar/components/Links/_index.scss
@@ -7,6 +7,7 @@
     color: #000 !important;
     box-shadow: 0 4px 20px rgba($primary-color, 0.35);
     transition: all 0.3s ease;
+    text-decoration: none;
 
     &:hover {
       transform: translateY(-2px);
