--- a/components/faq/_index.scss
+++ b/components/faq/_index.scss
@@ -27,6 +27,8 @@
     gap: 1rem;
     display: grid;
     grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    align-items: start;
     max-width: 1210px;
 
     .p-accordion {
@@ -80,6 +82,12 @@
     }
   }
 
+  @media (min-width: $sm) {
+    &-questions {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
   @media (min-width: $md) {
     padding: 5em 2em;
 
@@ -89,9 +97,6 @@
     }
 
     &-questions {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 1.5rem;
-
       .p-accordion {
         gap: 1rem;
       }
